# drunc

./: .gitignore  .nfs00000000074227ca000001ae  Dockerfile  Dockerfile_standalone  generate_protos.sh  open-port.py  requirements.txt  setup.cfg  setup.py  setup.sh
.github/workflows/: build_docker_image.yml
config/: test.json
data/: app04-conf.json  app31-conf.json  controller-boot-many.json  controller-boot-one.json  controller-boot.json  controller0-conf.json  controller1-conf.json  controller2-conf.json  controller3-conf.json  generate-boot-conf.py  process-manager-CERN-kafka.json  process-manager-k8s-pocket.json  process-manager-k8s.json  process-manager-no-kafka.json  process-manager.json  topcontroller-conf.json
data/fsm/: fsm_configuration.json  fsm_test_args.json  no_interfaces.json
docs/: Controller-interface.md  Controller.md  FAQ.md  FSM.md  HACKLIST.md  Messaging-format.md  Process-manager-interface.md  Process-manager.md  README.md  Release-notes.md  Running-drunc.md  Unified-shell.md  interfacing the process manager.md
proto/: command.proto  controller.proto  process_manager.proto
src/: .nfs000000000746005b000000ea
src/DRunC/apps/: __main__.py  main.py
src/DRunC/core/: configurations.py  subcontroller.py
src/DRunC/plugins/: pluginfactory.py
src/drunc/: exceptions.py  k8s_exceptions.py
src/drunc/application_registry/: client.py
src/drunc/apps/: __main__.py  __main_app_connectivity_server__.py  __main_controller__.py  __main_controller_shell__.py  __main_fake_daqapp_rest__.py  __main_pm__.py  __main_pm_receiver__.py  __main_pm_sender__.py  __main_pm_shell__.py  __main_receiver__.py  __main_sender__.py  __main_sm__.py  __main_sm_shell__.py  __main_ssh_validator__.py  __main_unified_shell__.py
test/core/: test_configuration.json  test_configurations.py
tests/: test_dummy_authoriser.py
(+169 files in other folders)
