[metadata]
name = drunc
version = attr: drunc.__version__
url = https://github.com/plasorak/drunc
long_description = file: docs/README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = =src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src
include_package_data = true

# [options.data_files]
# * = ['confdata/*', 'webuidata/*']

[options.entry_points]
console_scripts =
    drunc_rcv = drunc.apps.__main_receiver__:main
    drunc_snd = drunc.apps.__main_sender__:main
