[metadata]
name = drunc
version = attr: drunc.__version__
url = https://github.com/plasorak/drunc
long_description = file: docs/README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
package_dir = =src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src
include_package_data = true

[options.package_data]
drunc.data = *
drunc.data.process_manager = *

[options.entry_points]
console_scripts =
    fake_daq_application = drunc.apps.__main_fake_daqapp_rest__:main
    drunc-controller = drunc.apps.__main_controller__:main
    drunc-controller-shell = drunc.apps.__main_controller_shell__:main
    drunc-process-manager = drunc.apps.__main_pm__:main
    drunc-process-manager-shell = drunc.apps.__main_pm_shell__:main
    drunc-unified-shell = drunc.apps.__main_unified_shell__:main
    drunc-fsm-tests = drunc.tests.__main_fsm__:main
    application-registry-service = drunc.apps.__main_app_connectivity_server__:main
    drunc-ssh-validator = drunc.apps.__main_ssh_validator__:main